--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "well-named-in",
   "version": "1.0.0",
   "description": "JS Assignment Repository",
-  "main": "colorCoder.js",
+  "main": "app/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app/colorCoder.js"
+    "test": "node app/test.js",
+    "start": "node app/main.js"
   },
   "repository": {
     "type": "git",
