--- a/package.json
+++ b/package.json
@@ -16,5 +16,6 @@
   "bugs": {
     "url": "https://github.com/clean-s-1/well-named-in-js/issues"
   },
-  "homepage": "https://github.com/clean-s-1/well-named-in-js#readme"
+  "homepage": "https://github.com/clean-s-1/well-named-in-js#readme",
+  "type":"module"
 }
